--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-  <title>Alok</title>
+  <title>Nitin</title>
   <meta content="" name="descriptison">
   <meta content="" name="keywords">
   <meta name="google-site-verification" content="PMNGZ8NIb9W1zhy7Y_IBAfb0TU5mX2LbB4aR6oYkQOI" />
@@ -99,14 +99,14 @@
     <div class="d-flex flex-column">
 
       <div class="profile">
-        <img src="assets/img/profile-img.jpg" alt="" class="img-fluid rounded-circle">
-        <h1 class="text-light"><a href="index.html">Alok S Jaiswal</a></h1>
+        <img src="assets/img/profile-img.png" alt="" class="img-fluid rounded-circle">
+        <h1 class="text-light"><a href="index.html">Nitin Kumar</a></h1>
         <div class="social-links mt-3 text-center">
-          <a href="https://www.linkedin.com/in/aloknitg" class="linkedin"><i class="bx bxl-linkedin"></i></a>
+          <a href="https://www.linkedin.com/in/Nitinnitg" class="linkedin"><i class="bx bxl-linkedin"></i></a>
           <a href="https://join.skype.com/invite/OGjYbwxSwHIV" class="google-plus"><i class="bx bxl-skype"></i></a>
-          <a href="https://github.com/alokjaiswal" class="github"><i class="bx bxl-github"></i></a>
-          <a href="https://twitter.com/AlokSJAISWAL2" class="twitter"><i class="bx bxl-twitter"></i></a> 
-          <a href="https://www.facebook.com/alok.jaiswal.104" class="facebook"><i class="bx bxl-facebook"></i></a>
+          <a href="https://github.com/Nitinjaiswal" class="github"><i class="bx bxl-github"></i></a>
+          <a href="https://twitter.com/NitinSJAISWAL2" class="twitter"><i class="bx bxl-twitter"></i></a> 
+          <a href="https://www.facebook.com/Nitin.jaiswal.104" class="facebook"><i class="bx bxl-facebook"></i></a>
           <!--<a href="#" class="instagram"><i class="bx bxl-instagram"></i></a> -->
         </div>
       </div>
@@ -133,8 +133,8 @@
   <!-- ======= Hero Section ======= -->
   <section id="hero" class="d-flex flex-column justify-content-center align-items-center">
     <div class="hero-container" data-aos="fade-in">
-      <h1>Alok S Jaiswal</h1>
-      <p>I'm <span class="typed" data-typed-items="Blockchain Designer,Blockchain Developer, Freelancer, Web Developer"></span></p>
+      <h1>Nitin Kumar</h1>
+      <p>I'm <span class="typed" data-typed-items="Backend Developer,AWS Developer, Freelancer, Web Developer"></span></p>
     </div>
   </section><!-- End Hero -->
 
@@ -151,10 +151,10 @@
 
         <div class="row">
           <div class="col-lg-4" data-aos="fade-right">
-            <img src="assets/img/profile-img.jpg" class="img-fluid" alt="">
+            <img src="assets/img/profile-img.png" class="img-fluid" alt="">
           </div>
           <div class="col-lg-8 pt-4 pt-lg-0 content" data-aos="fade-left">
-            <h3>Blockchain Developer &amp; Web Developer.</h3>
+            <h3>Backend Developer &amp; Web Developer.</h3>
             <p class="font-italic">
               <!-- Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
               magna aliqua. -->
@@ -162,23 +162,23 @@
             <div class="row">
               <div class="col-lg-6">
                 <ul>
-                  <li><i class="icofont-rounded-right"></i> <strong>Birthday:</strong> 29 August 1998</li>
-                  <li><i class="icofont-rounded-right"></i> <strong>Website:</strong> www.aloksjaiswal.com</li>
-                  <li><i class="icofont-rounded-right"></i> <strong>Phone:</strong> +91 7000085869</li>
-                  <li><i class="icofont-rounded-right"></i> <strong>City:</strong> City : Ponda, Goa</li>
+                  <li><i class="icofont-rounded-right"></i> <strong>Birthday:</strong> 08 June 1995</li>
+                  <!-- <li><i class="icofont-rounded-right"></i> <strong>Website:</strong> </li> -->
+                  <li><i class="icofont-rounded-right"></i> <strong>Phone:</strong> +91 8210717845</li>
+                  <li><i class="icofont-rounded-right"></i> <strong>City:</strong> City : Bangalore, Karnataka</li>
                 </ul>
               </div>
               <div class="col-lg-6">
                 <ul>
-                  <li><i class="icofont-rounded-right"></i> <strong>Age:</strong> 22</li>
-                  <li><i class="icofont-rounded-right"></i> <strong>Degree:</strong> BTech</li>
-                  <li><i class="icofont-rounded-right"></i> <strong>Email:</strong> aloknitg@gmail.com</li>
+                  <li><i class="icofont-rounded-right"></i> <strong>Age:</strong> 25</li>
+                  <li><i class="icofont-rounded-right"></i> <strong>Degree:</strong> BE</li>
+                  <li><i class="icofont-rounded-right"></i> <strong>Email:</strong> nitincse18@gmail.com</li>
                   <li><i class="icofont-rounded-right"></i> <strong>Freelance:</strong> Available</li>
                 </ul>
               </div>
             </div>
             <p>
-              I am a undergraduate at the National Institute of Technology, Goa pursuing Computer Science and Engineering. I am highly interested in the fields of Blockchain, Cryptography and Computer networks. I love exploring different emerging technologies and prefer cooking in my leisure time.
+              I am a undergraduate at the SDM College of Engineering & Technology, Dharwad pursuing Computer Science and Engineering. I am highly interested in the fields of Backend Development, AWS and Node.JS. I love exploring different emerging technologies and prefer cooking in my leisure time.
             </p>
           </div>
         </div>
@@ -194,20 +194,13 @@
         <div class="section-title col-lg-12 text-center" id="skills">
           <h2 style="text-align: left;">Skills</h2>
           <ul>
-        <li>Python</li>
-        <li>C++</li>
         <li>Nodejs</li>
         <li>JavaScript</li>
         <li>C</li>
-        <li>Solidity</li>
         <li>React.js</li>
         <li>Express.js</li>
         <li>MySQL</li>
         <li>Jquery</li>
-        <li>Blockchain</li>
-        <li>Ethereum</li>
-        <li>Truffle</li>
-        <li>Smart Contracts</li>
         <li>Git</li>
         <li>Object Oriented Programming</li>
 
@@ -519,7 +512,7 @@
           <div class="col-lg-4 col-md-12 icon-box" data-aos="fade-up">
             <div class="icon"><i class="fa fa-envelope"></i></div>
             <div style="text-align: left; padding-top: 20px; padding-left: 10px; height:70px">
-              aloknitg@gmail.com
+              Nitinnitg@gmail.com
             </div>
           </div>
         </div>
@@ -552,7 +545,7 @@
               <div class="email">
                 <i class="icofont-envelope"></i>
                 <h4>Email:</h4>
-                <p>aloknitg@gmail.com</p>
+                <p>Nitinnitg@gmail.com</p>
               </div>
 
               <div class="phone">
@@ -579,7 +572,7 @@
   <footer id="footer">
     <div class="container">
       <div class="copyright">
-        &copy; Copyright <strong><span>Alok S Jaiswal</span></strong>
+        &copy; Copyright <strong><span>Nitin Kumar</span></strong>
       </div>
     </div>
   </footer><!-- End  Footer -->
