--- a/index.html
+++ b/index.html
@@ -277,7 +277,7 @@
                                     <div class="circle"><img class="rounded-circle img-fluid" src="assets/img/nitgoa.jpg" alt=""></div>
                                     <div class="content">
                                         <span class="year">2016 - Present</span>
-                                        <h4 class="title">National Institute of Technology Goa </h4>
+                                        <h4 class="title">SDM College of Engineering & Technology </h4>
                                         <!-- <h6 class="title1">Blockchain Developer Intern </h6> -->
                                         <p class="description" style="text-align: justify;">
                                             BTECH in Computer Science
@@ -500,19 +500,19 @@
           <div class="col-lg-4 col-md-12 icon-box" style="text-align: center;" data-aos="fade-up">
             <div class="icon"><i class="icofont-location-pin"></i></div>
             <div style="text-align: left; padding-top: 10px; padding-left: 10px; height:70px">
-              National Institute of Technology Goa
+              SDM College of Engineering & Technology
             </div>
           </div>
           <div class="col-lg-4 col-md-12 icon-box" data-aos="fade-up">
             <div class="icon"><i class="fa fa-phone"></i></div>
             <div style="text-align: left; padding-top: 20px; padding-left: 10px; height:70px">
-              +91-7000085869
+              +91-8210717845
             </div>
           </div>
           <div class="col-lg-4 col-md-12 icon-box" data-aos="fade-up">
             <div class="icon"><i class="fa fa-envelope"></i></div>
             <div style="text-align: left; padding-top: 20px; padding-left: 10px; height:70px">
-              Nitinnitg@gmail.com
+              nitincse18@gmail.com
             </div>
           </div>
         </div>
@@ -539,19 +539,19 @@
               <div class="address">
                 <i class="icofont-google-map"></i>
                 <h4>Location:</h4>
-                <p>National Institute of Technology Goa, Ponda, Goa</p>
+                <p>SDM College of Engineering & Technology, Ponda, Goa</p>
               </div>
 
               <div class="email">
                 <i class="icofont-envelope"></i>
                 <h4>Email:</h4>
-                <p>Nitinnitg@gmail.com</p>
+                <p>nitincse18@gmail.com</p>
               </div>
 
               <div class="phone">
                 <i class="icofont-phone"></i>
                 <h4>Call:</h4>
-                <p>+91-7000085869</p>
+                <p>+91-8210717845</p>
               </div>
               <div class="mapouter" style="width:100%"><div class="gmap_canvas"><iframe width=100% height="290" id="gmap_canvas" src="https://maps.google.com/maps?q=nit%20goa&t=&z=15&ie=UTF8&iwloc=&output=embed" frameborder="0" scrolling="no" marginheight="0" marginwidth="0"></iframe><a href="https://www.embedgooglemap.org">embed google map</a></div><style>.mapouter{position:relative;text-align:right;height:290px;width:600px;}.gmap_canvas {overflow:hidden;background:none!important;height:290px;width:100%;}</style> </div>
             </div>
