--- a/index.html
+++ b/index.html
@@ -231,20 +231,17 @@
                             <div class="timeline-content">
                                 <div class="circle"><span><i class="fa fa-globe"></i></span></div>
                                 <div class="content">
-                                    <span class="year">June 2019 - July 2019</span>
-                                    <h4 class="title">Siemens </h4>
-                                    <h6 class="title1">Blockchain Developer Intern </h6>
+                                    <span class="year">November 2019 - Present</span>
+                                    <h4 class="title">LinkCXO Global Pvt. Ltd. </h4>
+                                    <h6 class="title1">Sr. Software Developer </h6>
                                     <p class="description" style="text-align: justify;">
                                       <ul style="text-align: justify;">
-                                          <li>Developed a blockchain platform and implemented distributed application(DApp) on it, which was
-                                          then integrated in the original pipeline, thereby enabling the clients to get the sensor data from the
-                                          blockchain node securely and easily.
+                                          <li>Developed RESTfull secured APIs with json web token and Documented API based on results of analysis.
+                                          Created pipeline using AWS and deploy Node project.
                                           </li>
-                                          <li>Developed a RESTfull API service for the blockchain platform allowing low storage devices such as
-                                          sensors, mobile phones,etc to interact with the network .
+                                          <li>Developed frontend application using React.JS, Bootstrap, HTML, CSS and deployed using AWS amplify.
                                           </li>
-                                          <li>Designed and implemented Proof of Authority(POA) Consensus Algorithm in the Framework, which
-                                          ensured that all the nodes in the distributed network comes to common agreement.
+                                          <li>Handling team of more than 10 members and sucessfully lived 2 projects.
                                           </li>
                                       </ul>
                                     </p>
@@ -276,12 +273,12 @@
                                 <div class="timeline-content">
                                     <div class="circle"><img class="rounded-circle img-fluid" src="assets/img/nitgoa.jpg" alt=""></div>
                                     <div class="content">
-                                        <span class="year">2016 - Present</span>
+                                        <span class="year">2014 - 2018</span>
                                         <h4 class="title">SDM College of Engineering & Technology </h4>
                                         <!-- <h6 class="title1">Blockchain Developer Intern </h6> -->
                                         <p class="description" style="text-align: justify;">
-                                            BTECH in Computer Science
-                                            CGPA : 8.38
+                                            BE in Computer Science
+                                            CGPA : 7.18
                                         </p>
                                         <div class="icon"><span></span></div>
                                     </div>
@@ -291,11 +288,11 @@
                                 <div class="timeline-content">
                                     <div class="circle"><img class="rounded-circle img-fluid" src="assets/img/12.png" alt=""></div>
                                     <div class="content">
-                                        <span class="year">2014 - 2016</span>
-                                        <h4 class="title">Sri Chaitanya Junior College Hydernagar, Hyderabad </h4>
+                                        <span class="year">2011 - 2013</span>
+                                        <h4 class="title">Akshaywat college, Mahua, Bihar </h4>
                                         <p class="description">
                                           Intermediate
-                                          SCORE : 972/1000
+                                          SCORE : 69%
                                         </p>                                            </p>
                                         <div class="icon"><span></span></div>
                                     </div>
@@ -311,7 +308,7 @@
         </section><!-- End experience Section -->
 
 
-        
+<!--         
 
         <section id="publication" class="publication">
       <div class="container">
@@ -346,7 +343,7 @@
       </div>
     </section><!-- End Services Section -->
 
-    
+     -->
 
 
 
