--- a/index.html
+++ b/index.html
@@ -102,11 +102,11 @@
         <img src="assets/img/profile-img.png" alt="" class="img-fluid rounded-circle">
         <h1 class="text-light"><a href="index.html">Nitin Kumar</a></h1>
         <div class="social-links mt-3 text-center">
-          <a href="https://www.linkedin.com/in/Nitinnitg" class="linkedin"><i class="bx bxl-linkedin"></i></a>
-          <a href="https://join.skype.com/invite/OGjYbwxSwHIV" class="google-plus"><i class="bx bxl-skype"></i></a>
-          <a href="https://github.com/Nitinjaiswal" class="github"><i class="bx bxl-github"></i></a>
-          <a href="https://twitter.com/NitinSJAISWAL2" class="twitter"><i class="bx bxl-twitter"></i></a> 
-          <a href="https://www.facebook.com/Nitin.jaiswal.104" class="facebook"><i class="bx bxl-facebook"></i></a>
+          <a href="https://www.linkedin.com/in/nitin-kumar-725045109/" class="linkedin"><i class="bx bxl-linkedin"></i></a>
+          <a href="https://join.skype.com/invite/XGBkEnb9IDoY" class="google-plus"><i class="bx bxl-skype"></i></a>
+          <a href="https://github.com/nitincs18" class="github"><i class="bx bxl-github"></i></a>
+          <!-- <a href="https://twitter.com/NitinSJAISWAL2" class="twitter"><i class="bx bxl-twitter"></i></a>  -->
+          <a href="https://www.facebook.com/splnitin/" class="facebook"><i class="bx bxl-facebook"></i></a>
           <!--<a href="#" class="instagram"><i class="bx bxl-instagram"></i></a> -->
         </div>
       </div>
@@ -120,7 +120,7 @@
           <li><a href="#education"><i class="bx bx-book-add"></i> <span>Education</span></a></li>
           <li><a href="#publication"><i class="bx bx-news"></i> <span>Publications</span></a></li>
           <li><a href="#portfolio"><i class="bx bx-book-content"></i> Projects</a></li>
-          <li><a href="#testimonials"><i class="bx bx-server"></i> Resume & CV</a></li>
+          <li><a href="#testimonials"><i class="bx bx-server"></i> Resume</a></li>
           <li><a href="#contact"><i class="bx bx-envelope"></i> Contact</a></li>
 
         </ul>
@@ -462,25 +462,25 @@
 
         <div class="section-title">
           <h2>Resume</h2>
-          <p>Take my Resume and CV</p>
+          <p>Take my Resume </p>
         </div>
 
       <!-- <div class="container"> -->
         <div class="row">
-          <div class="col-lg-6">
+          <div class="col-lg-12">
               <div class="row">
                 <div class="col-lg-12 text-center">
                   <button id="resume_button" class="btn btn-primary btn-xl text-uppercase" onclick=" window.open('/resume.pdf')">Resume</button>
                 </div>
               </div>
           </div>
-          <div class="col-lg-6">
+          <!-- <div class="col-lg-6">
               <div class="row">
                 <div class="col-lg-12 text-center">
                   <button id="resume_button" class="btn btn-primary btn-xl text-uppercase" onclick=" window.open('/CV.pdf')">CV</button>
                 </div>
               </div>
-          </div>
+          </div> -->
         </div>
       </div>
     </section><!-- End Testimonials Section -->
