--- a/index.html
+++ b/index.html
@@ -165,7 +165,7 @@
                   <li><i class="icofont-rounded-right"></i> <strong>Birthday:</strong> 08 June 1995</li>
                   <!-- <li><i class="icofont-rounded-right"></i> <strong>Website:</strong> </li> -->
                   <li><i class="icofont-rounded-right"></i> <strong>Phone:</strong> +91 8210717845</li>
-                  <li><i class="icofont-rounded-right"></i> <strong>City:</strong> City : Bangalore, Karnataka</li>
+                  <li><i class="icofont-rounded-right"></i> <strong>City:</strong> Bangalore, Karnataka</li>
                 </ul>
               </div>
               <div class="col-lg-6">
@@ -178,7 +178,9 @@
               </div>
             </div>
             <p>
-              I am a undergraduate at the SDM College of Engineering & Technology, Dharwad pursuing Computer Science and Engineering. I am highly interested in the fields of Backend Development, AWS and Node.JS. I love exploring different emerging technologies and prefer cooking in my leisure time.
+              Sr. Software Developer with over two years of successful experience in Node.JS, AWS, MySQL, MongoDB.
+Recognized consistently for performance excellence and contributions to success in information and
+technology industry. Strengths in Node.JS and AWS backed by training in Computer Seience.
             </p>
           </div>
         </div>
@@ -271,7 +273,7 @@
                         <div class="main-timeline9">
                             <div class="timeline">
                                 <div class="timeline-content">
-                                    <div class="circle"><img class="rounded-circle img-fluid" src="assets/img/nitgoa.jpg" alt=""></div>
+                                    <div class="circle"><img class="rounded-circle img-fluid" src="assets/img/sdm.jfif" alt=""></div>
                                     <div class="content">
                                         <span class="year">2014 - 2018</span>
                                         <h4 class="title">SDM College of Engineering & Technology </h4>
@@ -286,7 +288,7 @@
                             </div>
                             <div class="timeline">
                                 <div class="timeline-content">
-                                    <div class="circle"><img class="rounded-circle img-fluid" src="assets/img/12.png" alt=""></div>
+                                    <div class="circle"><img class="rounded-circle img-fluid" src="assets/img/12.jpg" alt=""></div>
                                     <div class="content">
                                         <span class="year">2011 - 2013</span>
                                         <h4 class="title">Akshaywat college, Mahua, Bihar </h4>
@@ -497,7 +499,7 @@
           <div class="col-lg-4 col-md-12 icon-box" style="text-align: center;" data-aos="fade-up">
             <div class="icon"><i class="icofont-location-pin"></i></div>
             <div style="text-align: left; padding-top: 10px; padding-left: 10px; height:70px">
-              SDM College of Engineering & Technology
+              HSR Layout, Bangalore
             </div>
           </div>
           <div class="col-lg-4 col-md-12 icon-box" data-aos="fade-up">
@@ -536,7 +538,7 @@
               <div class="address">
                 <i class="icofont-google-map"></i>
                 <h4>Location:</h4>
-                <p>SDM College of Engineering & Technology, Ponda, Goa</p>
+                <p>HSR Layout, Bangalore</p>
               </div>
 
               <div class="email">
@@ -550,7 +552,8 @@
                 <h4>Call:</h4>
                 <p>+91-8210717845</p>
               </div>
-              <div class="mapouter" style="width:100%"><div class="gmap_canvas"><iframe width=100% height="290" id="gmap_canvas" src="https://maps.google.com/maps?q=nit%20goa&t=&z=15&ie=UTF8&iwloc=&output=embed" frameborder="0" scrolling="no" marginheight="0" marginwidth="0"></iframe><a href="https://www.embedgooglemap.org">embed google map</a></div><style>.mapouter{position:relative;text-align:right;height:290px;width:600px;}.gmap_canvas {overflow:hidden;background:none!important;height:290px;width:100%;}</style> </div>
+              <!-- <div class="mapouter" style="width:100%"><div class="gmap_canvas"><iframe width=100% height="290" id="gmap_canvas" src="https://maps.google.com/maps?q=nit%20goa&t=&z=15&ie=UTF8&iwloc=&output=embed" frameborder="0" scrolling="no" marginheight="0" marginwidth="0"></iframe><a href="https://www.embedgooglemap.org">embed google map</a></div><style>.mapouter{position:relative;text-align:right;height:290px;width:600px;}.gmap_canvas {overflow:hidden;background:none!important;height:290px;width:100%;}</style> </div> -->
+              <div class="mapouter"><div class="gmap_canvas"><iframe width="482" height="378" id="gmap_canvas" src="https://maps.google.com/maps?q=%20kudlu%20gate,%20bangalore&t=&z=13&ie=UTF8&iwloc=&output=embed" frameborder="0" scrolling="no" marginheight="0" marginwidth="0"></iframe><a href="https://yt2.org/youtube-to-mp3-ALeKk00qEW0sxByTDSpzaRvl8WxdMAeMytQ1611842368056QMMlSYKLwAsWUsAfLipqwCA2ahUKEwiikKDe5L7uAhVFCuwKHUuFBoYQ8tMDegUAQCSAQCYAQCqAQdnd3Mtd2l6">youtube to mp3</a><br><style>.mapouter{position:relative;text-align:right;height:378px;width:482px;}</style><style>.gmap_canvas {overflow:hidden;background:none!important;height:378px;width:482px;}</style></div></div>
             </div>
 
           </div>
